--- a/index.html
+++ b/index.html
@@ -1,32 +1,47 @@
-<!doctype html>
+<!DOCTYPE html>
 <html lang="en">
 <head>
-    <meta charset="utf-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1">
+    <meta charset="utf-8"/>
+    <meta name="viewport" content="width=device-width, initial-scale=1"/>
     <title>Spongemocker</title>
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.2/dist/css/bootstrap.min.css" rel="stylesheet"
-          integrity="sha384-Zenh87qX5JnK2Jl0vWa8Ck2rdkQ2Bzep5IDxbcnCeuOxjzrPF/et3URy9Bv1WTRi" crossorigin="anonymous">
-    <link href="styles.css" rel="stylesheet">
+    <link
+            href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.2/dist/css/bootstrap.min.css"
+            rel="stylesheet"
+            integrity="sha384-Zenh87qX5JnK2Jl0vWa8Ck2rdkQ2Bzep5IDxbcnCeuOxjzrPF/et3URy9Bv1WTRi"
+            crossorigin="anonymous"
+    />
+    <link href="styles.css" rel="stylesheet"/>
 </head>
 <body>
 <h1>Spongemocker</h1>
 <div class="row mb-3">
     <label for="inputArea" class="col-sm-2 col-form-label">Input</label>
     <div class="col-sm-10">
-        <textarea id="inputArea" class="form-control" aria-label="Input"></textarea>
+        <textarea
+                id="inputArea"
+                class="form-control"
+                aria-label="Input"
+        ></textarea>
     </div>
 </div>
 <div class="row mb-3">
     <label for="outputArea" class="col-sm-2 col-form-label">Output</label>
     <div class="col-sm-10">
-        <textarea id="outputArea" class="form-control" aria-label="Output" readonly></textarea>
+        <textarea
+                id="outputArea"
+                class="form-control"
+                aria-label="Output"
+                readonly
+        ></textarea>
     </div>
 </div>
 <button id="clearBtn" class="btn btn-danger">Clear</button>
 
-<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.2/dist/js/bootstrap.bundle.min.js"
+<script
+        src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.2/dist/js/bootstrap.bundle.min.js"
         integrity="sha384-OERcA2EqjJCMA+/3y+gxIOqMEjwtxJY7qPCqsdltbNJuaOe923+mo//f6V8Qbsw3"
-        crossorigin="anonymous"></script>
+        crossorigin="anonymous"
+></script>
 <script src="script.js"></script>
 </body>
 </html>
