--- a/index.html
+++ b/index.html
@@ -3,10 +3,7 @@
   <head>
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
-    <meta
-      name="description"
-      content="Your everyday helper to spongemock some text"
-    />
+    <meta name="description" content="Your everyday helper to spongemock some text" />
     <title>Spongemocker</title>
     <link
       href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.2/dist/css/bootstrap.min.css"
@@ -24,24 +21,13 @@
           <div class="row mb-3">
             <label for="inputArea" class="col-sm-2 col-form-label">Input</label>
             <div class="col-sm-10">
-              <textarea
-                id="inputArea"
-                class="form-control"
-                aria-label="Input"
-              ></textarea>
+              <textarea id="inputArea" class="form-control" aria-label="Input"></textarea>
             </div>
           </div>
           <div class="row mb-3">
-            <label for="outputArea" class="col-sm-2 col-form-label"
-              >Output</label
-            >
+            <label for="outputArea" class="col-sm-2 col-form-label">Output</label>
             <div class="col-sm-10">
-              <textarea
-                id="outputArea"
-                class="form-control"
-                aria-label="Output"
-                readonly
-              ></textarea>
+              <textarea id="outputArea" class="form-control" aria-label="Output" readonly></textarea>
             </div>
           </div>
           <button id="clearBtn" class="btn btn-danger">Clear</button>
