--- a/index.html
+++ b/index.html
@@ -11,6 +11,7 @@
       integrity="sha384-Zenh87qX5JnK2Jl0vWa8Ck2rdkQ2Bzep5IDxbcnCeuOxjzrPF/et3URy9Bv1WTRi"
       crossorigin="anonymous"
     />
+    <link rel="stylesheet" type="text/css" href="https://cdn.jsdelivr.net/npm/toastify-js/src/toastify.min.css" />
     <link href="styles.css" rel="stylesheet" />
   </head>
   <body>
@@ -30,6 +31,7 @@
               <textarea id="outputArea" class="form-control" aria-label="Output" readonly></textarea>
             </div>
           </div>
+          <button id="copyBtn" class="btn btn-primary" data-clipboard-target="#outputArea">Copy</button>
           <button id="clearBtn" class="btn btn-danger">Clear</button>
         </div>
       </div>
@@ -46,6 +48,9 @@
       integrity="sha384-OERcA2EqjJCMA+/3y+gxIOqMEjwtxJY7qPCqsdltbNJuaOe923+mo//f6V8Qbsw3"
       crossorigin="anonymous"
     ></script>
+
+    <script type="text/javascript" src="https://cdn.jsdelivr.net/npm/toastify-js"></script>
+    <script src="libs/clipboard.min.js"></script>
     <script src="script.js"></script>
   </body>
 </html>
