fix invisible output, use autofocus, shorter toast

--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
   <body>
     <main class="container">
       <label for="textInput">Input</label>
-      <input id="textInput" type="text" aria-label="Input" placeholder="This is app is so useful!" />
+      <input id="textInput" type="text" aria-label="Input" placeholder="This is app is so useful!" autofocus />
       <label for="textOutput">Output</label>
       <input id="textOutput" type="text" aria-label="Output" placeholder="tHiS Is aPp iS So uSeFuL!" readonly />
       <div class="button-container">
