remove tooltips because they are annoying on android

--- a/index.html
+++ b/index.html
@@ -16,8 +16,8 @@
       <label for="textOutput">Output</label>
       <input id="textOutput" type="text" aria-label="Output" placeholder="tHiS Is aPp iS So uSeFuL!" readonly />
       <div class="button-container">
-        <button id="copyBtn" data-clipboard-target="#textOutput" data-tooltip="Copy output to clipboard">Copy</button>
-        <button id="clearBtn" class="secondary" data-tooltip="Clear input">Clear</button>
+        <button id="copyBtn" data-clipboard-target="#textOutput">Copy</button>
+        <button id="clearBtn" class="secondary">Clear</button>
       </div>
       <p>
         Inspired by this
